fixed dark mode

--- a/src/css/edit-property.css
+++ b/src/css/edit-property.css
@@ -3,6 +3,8 @@
     align-items: center;
     padding: 0.5rem;
     gap: 0.5rem;
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
 }
 
 .icon {
@@ -19,4 +21,6 @@
 
 #property {
     border: none;
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
 }
